--- a/vocabulary.html
+++ b/vocabulary.html
@@ -73,7 +73,7 @@
 <div>
 <table class="table table-striped">
     <tbody>
-      <tr><td><a href="#">Vocabulary Part 01<a/></td></tr>
+      <tr><td><a href="vocabulary/Vocabulary_Part_1.htm">Vocabulary Part 01<a/></td></tr>
 	  <tr><td><a href="#">Vocabulary Part 02<a/></td></tr>
 	  <tr><td><a href="#">Vocabulary Part 03<a/></td></tr>
 	  <tr><td><a href="#">Vocabulary Part 04<a/></td></tr>
