--- a/vocabulary/Vocabulary_Part_1.htm
+++ b/vocabulary/Vocabulary_Part_1.htm
@@ -1568,7 +1568,7 @@ I[51][3]=new Array();
 I[51][3][0]=new Array('skilled','',1,100,1);
 I[51][3][1]=new Array('renounce','',0,0,1);
 I[51][3][2]=new Array('joyous','',0,0,1);
-I[51][3][3]=new Array('able','',0,0,1);
+I[51][3][3]=new Array('spurn','',0,0,1);
 I[52]=new Array();I[52][0]=100;
 I[52][1]='';
 I[52][2]='0';
@@ -1576,7 +1576,7 @@ I[52][3]=new Array();
 I[52][3][0]=new Array('capable','',1,100,1);
 I[52][3][1]=new Array('renounce','',0,0,1);
 I[52][3][2]=new Array('joyous','',0,0,1);
-I[52][3][3]=new Array('able','',0,0,1);
+I[52][3][3]=new Array('spurn','',0,0,1);
 I[53]=new Array();I[53][0]=100;
 I[53][1]='';
 I[53][2]='0';
@@ -1584,7 +1584,7 @@ I[53][3]=new Array();
 I[53][3][0]=new Array('competent','',1,100,1);
 I[53][3][1]=new Array('renounce','',0,0,1);
 I[53][3][2]=new Array('joyous','',0,0,1);
-I[53][3][3]=new Array('able','',0,0,1);
+I[53][3][3]=new Array('spurn','',0,0,1);
 I[54]=new Array();I[54][0]=100;
 I[54][1]='';
 I[54][2]='0';
@@ -1592,7 +1592,7 @@ I[54][3]=new Array();
 I[54][3][0]=new Array('adept','',1,100,1);
 I[54][3][1]=new Array('renounce','',0,0,1);
 I[54][3][2]=new Array('joyous','',0,0,1);
-I[54][3][3]=new Array('able','',0,0,1);
+I[54][3][3]=new Array('spurn','',0,0,1);
 I[55]=new Array();I[55][0]=100;
 I[55][1]='';
 I[55][2]='0';
@@ -1600,7 +1600,7 @@ I[55][3]=new Array();
 I[55][3][0]=new Array('dexterous','',1,100,1);
 I[55][3][1]=new Array('renounce','',0,0,1);
 I[55][3][2]=new Array('joyous','',0,0,1);
-I[55][3][3]=new Array('able','',0,0,1);
+I[55][3][3]=new Array('spurn','',0,0,1);
 I[56]=new Array();I[56][0]=100;
 I[56][1]='';
 I[56][2]='0';
@@ -2132,11 +2132,11 @@ function DownTime(){
 <li class="QuizQuestion" id="Q_48" style="display: none;"><div class="QuestionText">Synonym of "ABDICATE"-</div><ol class="MCAnswers"><li id="Q_48_0"><button class="FuncButton" id="Q_48_0_Btn" onclick="CheckMCAnswer(48,0,this)">?</button>&#160;&#160;relinquish</li><li id="Q_48_1"><button class="FuncButton" id="Q_48_1_Btn" onclick="CheckMCAnswer(48,1,this)">?</button>&#160;&#160;renounce</li><li id="Q_48_2"><button class="FuncButton" id="Q_48_2_Btn" onclick="CheckMCAnswer(48,2,this)">?</button>&#160;&#160;quit</li><li id="Q_48_3"><button class="FuncButton" id="Q_48_3_Btn" onclick="CheckMCAnswer(48,3,this)">?</button>&#160;&#160;relieve</li></ol></li>
 <li class="QuizQuestion" id="Q_49" style="display: none;"><div class="QuestionText">Synonym of "ABJECT"-</div><ol class="MCAnswers"><li id="Q_49_0"><button class="FuncButton" id="Q_49_0_Btn" onclick="CheckMCAnswer(49,0,this)">?</button>&#160;&#160;awful</li><li id="Q_49_1"><button class="FuncButton" id="Q_49_1_Btn" onclick="CheckMCAnswer(49,1,this)">?</button>&#160;&#160;renounce</li><li id="Q_49_2"><button class="FuncButton" id="Q_49_2_Btn" onclick="CheckMCAnswer(49,2,this)">?</button>&#160;&#160;joyous</li><li id="Q_49_3"><button class="FuncButton" id="Q_49_3_Btn" onclick="CheckMCAnswer(49,3,this)">?</button>&#160;&#160;able</li></ol></li>
 <li class="QuizQuestion" id="Q_50" style="display: none;"><div class="QuestionText">Antonym of "ABJECT"-</div><ol class="MCAnswers"><li id="Q_50_0"><button class="FuncButton" id="Q_50_0_Btn" onclick="CheckMCAnswer(50,0,this)">?</button>&#160;&#160;august</li><li id="Q_50_1"><button class="FuncButton" id="Q_50_1_Btn" onclick="CheckMCAnswer(50,1,this)">?</button>&#160;&#160;renounce</li><li id="Q_50_2"><button class="FuncButton" id="Q_50_2_Btn" onclick="CheckMCAnswer(50,2,this)">?</button>&#160;&#160;joyous</li><li id="Q_50_3"><button class="FuncButton" id="Q_50_3_Btn" onclick="CheckMCAnswer(50,3,this)">?</button>&#160;&#160;able</li></ol></li>
-<li class="QuizQuestion" id="Q_51" style="display: none;"><div class="QuestionText">Synonym of "ABLE"-</div><ol class="MCAnswers"><li id="Q_51_0"><button class="FuncButton" id="Q_51_0_Btn" onclick="CheckMCAnswer(51,0,this)">?</button>&#160;&#160;skilled</li><li id="Q_51_1"><button class="FuncButton" id="Q_51_1_Btn" onclick="CheckMCAnswer(51,1,this)">?</button>&#160;&#160;renounce</li><li id="Q_51_2"><button class="FuncButton" id="Q_51_2_Btn" onclick="CheckMCAnswer(51,2,this)">?</button>&#160;&#160;joyous</li><li id="Q_51_3"><button class="FuncButton" id="Q_51_3_Btn" onclick="CheckMCAnswer(51,3,this)">?</button>&#160;&#160;able</li></ol></li>
-<li class="QuizQuestion" id="Q_52" style="display: none;"><div class="QuestionText">Synonym of "ABLE"-</div><ol class="MCAnswers"><li id="Q_52_0"><button class="FuncButton" id="Q_52_0_Btn" onclick="CheckMCAnswer(52,0,this)">?</button>&#160;&#160;capable</li><li id="Q_52_1"><button class="FuncButton" id="Q_52_1_Btn" onclick="CheckMCAnswer(52,1,this)">?</button>&#160;&#160;renounce</li><li id="Q_52_2"><button class="FuncButton" id="Q_52_2_Btn" onclick="CheckMCAnswer(52,2,this)">?</button>&#160;&#160;joyous</li><li id="Q_52_3"><button class="FuncButton" id="Q_52_3_Btn" onclick="CheckMCAnswer(52,3,this)">?</button>&#160;&#160;able</li></ol></li>
-<li class="QuizQuestion" id="Q_53" style="display: none;"><div class="QuestionText">Synonym of "ABLE"-</div><ol class="MCAnswers"><li id="Q_53_0"><button class="FuncButton" id="Q_53_0_Btn" onclick="CheckMCAnswer(53,0,this)">?</button>&#160;&#160;competent</li><li id="Q_53_1"><button class="FuncButton" id="Q_53_1_Btn" onclick="CheckMCAnswer(53,1,this)">?</button>&#160;&#160;renounce</li><li id="Q_53_2"><button class="FuncButton" id="Q_53_2_Btn" onclick="CheckMCAnswer(53,2,this)">?</button>&#160;&#160;joyous</li><li id="Q_53_3"><button class="FuncButton" id="Q_53_3_Btn" onclick="CheckMCAnswer(53,3,this)">?</button>&#160;&#160;able</li></ol></li>
-<li class="QuizQuestion" id="Q_54" style="display: none;"><div class="QuestionText">Synonym of "ABLE"-</div><ol class="MCAnswers"><li id="Q_54_0"><button class="FuncButton" id="Q_54_0_Btn" onclick="CheckMCAnswer(54,0,this)">?</button>&#160;&#160;adept</li><li id="Q_54_1"><button class="FuncButton" id="Q_54_1_Btn" onclick="CheckMCAnswer(54,1,this)">?</button>&#160;&#160;renounce</li><li id="Q_54_2"><button class="FuncButton" id="Q_54_2_Btn" onclick="CheckMCAnswer(54,2,this)">?</button>&#160;&#160;joyous</li><li id="Q_54_3"><button class="FuncButton" id="Q_54_3_Btn" onclick="CheckMCAnswer(54,3,this)">?</button>&#160;&#160;able</li></ol></li>
-<li class="QuizQuestion" id="Q_55" style="display: none;"><div class="QuestionText">Synonym of "ABLE"-</div><ol class="MCAnswers"><li id="Q_55_0"><button class="FuncButton" id="Q_55_0_Btn" onclick="CheckMCAnswer(55,0,this)">?</button>&#160;&#160;dexterous</li><li id="Q_55_1"><button class="FuncButton" id="Q_55_1_Btn" onclick="CheckMCAnswer(55,1,this)">?</button>&#160;&#160;renounce</li><li id="Q_55_2"><button class="FuncButton" id="Q_55_2_Btn" onclick="CheckMCAnswer(55,2,this)">?</button>&#160;&#160;joyous</li><li id="Q_55_3"><button class="FuncButton" id="Q_55_3_Btn" onclick="CheckMCAnswer(55,3,this)">?</button>&#160;&#160;able</li></ol></li>
+<li class="QuizQuestion" id="Q_51" style="display: none;"><div class="QuestionText">Synonym of "ABLE"-</div><ol class="MCAnswers"><li id="Q_51_0"><button class="FuncButton" id="Q_51_0_Btn" onclick="CheckMCAnswer(51,0,this)">?</button>&#160;&#160;skilled</li><li id="Q_51_1"><button class="FuncButton" id="Q_51_1_Btn" onclick="CheckMCAnswer(51,1,this)">?</button>&#160;&#160;renounce</li><li id="Q_51_2"><button class="FuncButton" id="Q_51_2_Btn" onclick="CheckMCAnswer(51,2,this)">?</button>&#160;&#160;joyous</li><li id="Q_51_3"><button class="FuncButton" id="Q_51_3_Btn" onclick="CheckMCAnswer(51,3,this)">?</button>&#160;&#160;spurn</li></ol></li>
+<li class="QuizQuestion" id="Q_52" style="display: none;"><div class="QuestionText">Synonym of "ABLE"-</div><ol class="MCAnswers"><li id="Q_52_0"><button class="FuncButton" id="Q_52_0_Btn" onclick="CheckMCAnswer(52,0,this)">?</button>&#160;&#160;capable</li><li id="Q_52_1"><button class="FuncButton" id="Q_52_1_Btn" onclick="CheckMCAnswer(52,1,this)">?</button>&#160;&#160;renounce</li><li id="Q_52_2"><button class="FuncButton" id="Q_52_2_Btn" onclick="CheckMCAnswer(52,2,this)">?</button>&#160;&#160;joyous</li><li id="Q_52_3"><button class="FuncButton" id="Q_52_3_Btn" onclick="CheckMCAnswer(52,3,this)">?</button>&#160;&#160;spurn</li></ol></li>
+<li class="QuizQuestion" id="Q_53" style="display: none;"><div class="QuestionText">Synonym of "ABLE"-</div><ol class="MCAnswers"><li id="Q_53_0"><button class="FuncButton" id="Q_53_0_Btn" onclick="CheckMCAnswer(53,0,this)">?</button>&#160;&#160;competent</li><li id="Q_53_1"><button class="FuncButton" id="Q_53_1_Btn" onclick="CheckMCAnswer(53,1,this)">?</button>&#160;&#160;renounce</li><li id="Q_53_2"><button class="FuncButton" id="Q_53_2_Btn" onclick="CheckMCAnswer(53,2,this)">?</button>&#160;&#160;joyous</li><li id="Q_53_3"><button class="FuncButton" id="Q_53_3_Btn" onclick="CheckMCAnswer(53,3,this)">?</button>&#160;&#160;spurn</li></ol></li>
+<li class="QuizQuestion" id="Q_54" style="display: none;"><div class="QuestionText">Synonym of "ABLE"-</div><ol class="MCAnswers"><li id="Q_54_0"><button class="FuncButton" id="Q_54_0_Btn" onclick="CheckMCAnswer(54,0,this)">?</button>&#160;&#160;adept</li><li id="Q_54_1"><button class="FuncButton" id="Q_54_1_Btn" onclick="CheckMCAnswer(54,1,this)">?</button>&#160;&#160;renounce</li><li id="Q_54_2"><button class="FuncButton" id="Q_54_2_Btn" onclick="CheckMCAnswer(54,2,this)">?</button>&#160;&#160;joyous</li><li id="Q_54_3"><button class="FuncButton" id="Q_54_3_Btn" onclick="CheckMCAnswer(54,3,this)">?</button>&#160;&#160;spurn</li></ol></li>
+<li class="QuizQuestion" id="Q_55" style="display: none;"><div class="QuestionText">Synonym of "ABLE"-</div><ol class="MCAnswers"><li id="Q_55_0"><button class="FuncButton" id="Q_55_0_Btn" onclick="CheckMCAnswer(55,0,this)">?</button>&#160;&#160;dexterous</li><li id="Q_55_1"><button class="FuncButton" id="Q_55_1_Btn" onclick="CheckMCAnswer(55,1,this)">?</button>&#160;&#160;renounce</li><li id="Q_55_2"><button class="FuncButton" id="Q_55_2_Btn" onclick="CheckMCAnswer(55,2,this)">?</button>&#160;&#160;joyous</li><li id="Q_55_3"><button class="FuncButton" id="Q_55_3_Btn" onclick="CheckMCAnswer(55,3,this)">?</button>&#160;&#160;spurn</li></ol></li>
 <li class="QuizQuestion" id="Q_56" style="display: none;"><div class="QuestionText">Synonym of "ABNEGATE"-</div><ol class="MCAnswers"><li id="Q_56_0"><button class="FuncButton" id="Q_56_0_Btn" onclick="CheckMCAnswer(56,0,this)">?</button>&#160;&#160;abjure</li><li id="Q_56_1"><button class="FuncButton" id="Q_56_1_Btn" onclick="CheckMCAnswer(56,1,this)">?</button>&#160;&#160;renounce</li><li id="Q_56_2"><button class="FuncButton" id="Q_56_2_Btn" onclick="CheckMCAnswer(56,2,this)">?</button>&#160;&#160;joyous</li><li id="Q_56_3"><button class="FuncButton" id="Q_56_3_Btn" onclick="CheckMCAnswer(56,3,this)">?</button>&#160;&#160;able</li></ol></li></ol>
 
 
