--- a/reference.html
+++ b/reference.html
@@ -74,13 +74,13 @@
     <div class="container-fluid">
         <div class="mbr-section-head">
             <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong>Story Corner</strong></h4>
-            <h5 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">It is library of Sneha Buri</h5>
+            <h5 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">It is an online library</h5>
         </div>
         <div class="row mt-4">
             <div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/features1.jpg">
+                        <img src="assets/images/drakula.jpg">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Drakula 1 &amp; 2</strong></h5>
@@ -91,21 +91,21 @@
                 </div>
             </div>
             
-			<!--***********************************************************************************************-->
+			<!--********************************************  2  ***************************************************-->
 			
 			<div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/features1.jpg">
+                        <img src="assets/images/feluda.jpg">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
-                            <strong>Story Title</strong>
+                            <strong>Feluda All 1</strong>
                         </h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Main: Main Writer</em><br><em>Translator: Translator Writer</em></h6>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Writer: Satyajit Ray</em><br><em>Type: Bengali Detective Story</em></h6>
                         
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="#" class="btn btn-primary item-btn display-7">Download</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="assets/files/Feluda_All_1.pdf" class="btn btn-primary item-btn display-7">Download</a></div>
                 </div>
             </div>
 			
