--- a/vocabulary.html
+++ b/vocabulary.html
@@ -74,9 +74,18 @@
 <table class="table table-striped">
     <tbody>
       <tr><td><a href="vocabulary/Vocabulary_Part_1.htm">Vocabulary Part 01<a/></td></tr>
-	  <tr><td><a href="#">Vocabulary Part 02<a/></td></tr>
+	  <tr><td><a href="vocabulary/Vocabulary_Part_02.htm">Vocabulary Part 02<a/></td></tr>
+	  
+	  <!--
 	  <tr><td><a href="#">Vocabulary Part 03<a/></td></tr>
 	  <tr><td><a href="#">Vocabulary Part 04<a/></td></tr>
+	  <tr><td><a href="#">Vocabulary Part 05<a/></td></tr>
+	  <tr><td><a href="#">Vocabulary Part 06<a/></td></tr>
+	  <tr><td><a href="#">Vocabulary Part 07<a/></td></tr>
+	  <tr><td><a href="#">Vocabulary Part 08<a/></td></tr>
+	  <tr><td><a href="#">Vocabulary Part 09<a/></td></tr>
+	  <tr><td><a href="#">Vocabulary Part 10<a/></td></tr>
+	  -->
 	  
     </tbody>
   </table> 
