--- a/sneha.html
+++ b/sneha.html
@@ -55,15 +55,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
-					<li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html"><span class="mobi-mbri mobi-mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a></li>
-					<li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="sneha.html"><span class="mobi-mbri mobi-mbri-camera mbr-iconfont mbr-iconfont-btn"></span>Sneha</a></li>
-					<li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="sujon.html"><span class="mobi-mbri mobi-mbri-database mbr-iconfont mbr-iconfont-btn"></span>Sujon</a></li>
-					<li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="vocabulary.html"><span class="mobi-mbri mobi-mbri-extension mbr-iconfont mbr-iconfont-btn"></span>Vocabulary</a></li>
-					<li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="reference.html"><span class="mobi-mbri mobi-mbri-globe-2 mbr-iconfont mbr-iconfont-btn"></span>Reference</a></li>
-					<li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="aboutUs.html"><span class="mobi-mbri mobi-mbri-hearth mbr-iconfont mbr-iconfont-btn"></span>About Us</a></li>
-				</ul>
-                
-                
+					<li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html">Home</a></li>
+					<li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="sneha.html">Sneha</a></li>
+					<li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="difa.html">Difa</a></li>
+					<li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="sujon.html">Sujon</a></li>
+					<li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="vocabulary.html">Vocabulary</a></li>
+					<li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="reference.html">Books</a></li>
+					<li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="aboutUs.html">About Us</a></li>
+				</ul>  
             </div>
         </div>
     </nav>
