--- a/vocabulary_practice.html
+++ b/vocabulary_practice.html
@@ -23,32 +23,11 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
- <style>
+  <style>
 		h1 {text-align: center;}
 		p {text-align: center;}
 		div {text-align: center;}
-
-.button {
-  padding: 15px 25px;
-  font-size: 24px;
-  text-align: center;
-  cursor: pointer;
-  outline: none;
-  color: #fff;
-  background-color: #04AA6D;
-  border: none;
-  border-radius: 15px;
-  box-shadow: 0 9px #999;
-}
-
-.button:hover {background-color: #3e8e41}
-
-.button:active {
-  background-color: #3e8e41;
-  box-shadow: 0 5px #666;
-  transform: translateY(4px);
-}
-</style>
+	</style>
   
   
 </head>
@@ -90,39 +69,29 @@
 
 </section>
 <br>
+<div>
+<table class="table table-striped">
+    <tbody>
+      <tr><td><a href="vocabulary/Vocabulary_Part_1.htm">Vocabulary Part 01 [ABHOR-ABNEGATE]<a/></td></tr>
+	  <tr><td><a href="vocabulary/Vocabulary_Part_02.htm">Vocabulary Part 02 [ABOLISH-ACCLAIM]<a/></td></tr>
+	  <!--
+	  <tr><td><a href="vocabulary/Vocabulary_Part_03.htm">Vocabulary Part 03 [ACCOLADE-ADAMANT]<a/></td></tr>
+	  <tr><td><a href="vocabulary/Vocabulary_Part_04.htm">Vocabulary Part 03<a/></td></tr>
+	  <tr><td><a href="vocabulary/Vocabulary_Part_05.htm">Vocabulary Part 04<a/></td></tr>
+	  <tr><td><a href="vocabulary/Vocabulary_Part_06.htm">Vocabulary Part 05<a/></td></tr>
+	  <tr><td><a href="vocabulary/Vocabulary_Part_07.htm">Vocabulary Part 06<a/></td></tr>
+	  <tr><td><a href="vocabulary/Vocabulary_Part_08.htm">Vocabulary Part 07<a/></td></tr>
+	  <tr><td><a href="vocabulary/Vocabulary_Part_09.htm">Vocabulary Part 08<a/></td></tr>
+	  <tr><td><a href="vocabulary/Vocabulary_Part_10.htm">Vocabulary Part 09<a/></td></tr>
+	  <tr><td><a href="vocabulary/Vocabulary_Part_11.htm">Vocabulary Part 10<a/></td></tr>
+	  -->
+	  
+    </tbody>
+  </table> 
 
-<section class="gallery3 cid-sxoaInucrd" id="gallery3-z">
-    
-    <!--*******************************************  1  ****************************************************-->
-	
-    <div class="container-fluid align-center">
-        <div class="mbr-section-head">
-            <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong>Vocabulary</strong></h4>
-		</div>
-       <br>
-	   <!--
-	   <div class="row mt-4">
-            <div class="item features-image сol-12 col-md-6 col-lg-3">
-                <div class="item-wrapper">
-                    <div class="item-img">
-                        <a href="assets/files/Drakula1_2.pdf"><img src="assets/images/drakula.jpg"></a>
-                    </div>
-                </div>
-            </div>
-		</div>
-		-->
-		
-		<a href="vocabulary_practice_lecture.html"><button class="button">Vocabulary Lecture Pdf</button></a> <br><br><br>
-		<a href="vocabulary_practice.html"><button class="button">Vocabulary Practice Sheet</button></a>
-		
-	
-	</div>
+</div>
 
 
-
-
-
-<br>
 <section class="footer3 cid-sxhOzbZE0S" once="footers" id="footer3-u">
     <div class="container">
         <div class="media-container-row align-center mbr-white">
