--- a/difa.html
+++ b/difa.html
@@ -74,9 +74,12 @@
     <tbody>
       <tr><td><a href="difa/1.1_Singular_and_Plural_Nouns.htm">Singular & Plural Nouns<a/></td></tr>
 	  <tr><td><a href="difa/1.2_Be_Verbs.htm">Be Verbs (am, is, are)<a/></td></tr>
-	  
 	  <tr><td><a href="difa/1.3_Action_Verbs.htm">Action Verbs<a/></td></tr>
 	  <tr><td><a href="difa/1.4_Periods_(.).htm">Period (.)<a/></td></tr>
+	  <tr><td><a href="difa/1.5_Capitalization.htm">Capitalization<a/></td></tr>
+	  <tr><td><a href="difa/1.6_Coordinating_Conjunction_1.htm">Coordinating Conjunction 1<a/></td></tr>
+	  
+	  
 	  <!--
 	  <tr><td><a href="sneha/levelWise/level_3.htm">Basic Grammar Level 3<a/></td></tr>
 	  <tr><td><a href="sneha/levelWise/level_4.htm">Basic Grammar Level 4<a/></td></tr>
