--- a/difa.html
+++ b/difa.html
@@ -78,7 +78,7 @@
 	  <tr><td><a href="difa/1.4_Periods_(.).htm">Period (.)<a/></td></tr>
 	  <tr><td><a href="difa/1.5_Capitalization.htm">Capitalization<a/></td></tr>
 	  <tr><td><a href="difa/1.6_Coordinating_Conjunction_1.htm">Coordinating Conjunction 1<a/></td></tr>
-	  
+	  <tr><td><a href="difa/1.7_Comma_(,).htm">Comma (,)<a/></td></tr>
 	  
 	  <!--
 	  <tr><td><a href="sneha/levelWise/level_3.htm">Basic Grammar Level 3<a/></td></tr>
